Compositor gets stuck if a sequencer window is also visible #33822

Closed
opened 2013-01-10 16:21:59 +01:00 by Björn Sonnenschein · 3 comments

%%%--- Operating System, Graphics card ---
Linux Mint 14, 64bit, Nvidia GTX 460

- Blender version with error, and version that worked ---

Error appears on manual git build, buildbot build and 2.65a official release

Error:
If while using the node compositor there is also a sequencer preview area visible, the compositor will get stuck with compositing while trying to update on node changes.

In the sample.blend simply play around with the Curves node. The Image backdrop image will only be partially on changes as long as the sequencer preview area is visible. The Problem gets more intensive with more complex nodes like blur with a big radius and disappears as soon as the top right area is changed to another type.%%%

%%%--- Operating System, Graphics card --- Linux Mint 14, 64bit, Nvidia GTX 460 - Blender version with error, and version that worked --- Error appears on manual git build, buildbot build and 2.65a official release Error: If while using the node compositor there is also a sequencer preview area visible, the compositor will get stuck with compositing while trying to update on node changes. In the sample.blend simply play around with the Curves node. The Image backdrop image will only be partially on changes as long as the sequencer preview area is visible. The Problem gets more intensive with more complex nodes like blur with a big radius and disappears as soon as the top right area is changed to another type.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Compositor now should work fine when sequencer is used in OpenGL preview. But sequencer will still kill compositor job when sequencer uses rendered preview and there's currently no way to solve this because of internal design issues of sequencer..

Thanks for the report to, considering it's fixed since ogl render will work fine now :) %%%

%%%Compositor now should work fine when sequencer is used in OpenGL preview. But sequencer will still kill compositor job when sequencer uses rendered preview and there's currently no way to solve this because of internal design issues of sequencer.. Thanks for the report to, considering it's fixed since ogl render will work fine now :) %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33822
No description provided.