Fix #33822: Compositor gets stuck if a sequencer window is also visible

Issue was caused by a fix for rendered sequencer preview mode, which
will likely conflict with compositor job. Made it so compositor job
will be killed when sequencer uses rendered preview.